# changes-roller

./: .bandit  .editorconfig  .gitattributes  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  SPECIFICATION.md  USAGE.md  pyproject.toml
.github/: PYPI_TRUSTED_PUBLISHER_SETUP.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  release-drafter.yml  release.yml  security.yml
demos/: .gitignore  README.md  basic-workflow.tape
docs/: Makefile  conf.py  configuration.md  examples.md  index.rst  installation.md  overview.md  quick-start.md  requirements.txt  specification.md
examples/dependency-update/: README.md  patch.sh  series.ini
examples/oslo-dependency-update/: README.md  patch.sh  series.ini
roller/: __init__.py  cli.py  config.py  executor.py  reporter.py  repository.py  workspace.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_config.py  test_executor.py  test_integration.py  test_reporter.py  test_repository.py  test_workspace.py
