[project]
name = "changes-roller"
version = "0.1.0"
description = "A command-line tool for creating and managing coordinated patch series across multiple Git repositories"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pavlo Kostianov", email = "pkostian@redhat.com"}
]
keywords = [
    "git",
    "patch",
    "automation",
    "cli",
    "repository",
    "batch-operations",
    "gerrit",
    "code-review",
    "multi-repo",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.7.10",
    "pre-commit>=3.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2023.0.0",
    "sphinx-autoapi>=3.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/k-pavlo/changes-roller"
Repository = "https://github.com/k-pavlo/changes-roller"
Issues = "https://github.com/k-pavlo/changes-roller/issues"
Documentation = "https://changes-roller.readthedocs.io"

[project.scripts]
roller = "roller.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["roller"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=roller",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.coverage.run]
source = ["roller"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "RUF001", # Ambiguous Unicode characters (intentional use of symbols)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MyPy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
pretty = true

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests"]
# B101: assert is OK for runtime checks
# B404/B603/B607: subprocess and git commands are core functionality
# B602: shell=True is intentional for run_command (executes user scripts)
skips = ["B101", "B404", "B603", "B607", "B602"]

# Commitizen configuration
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_provider = "pep621"
version_scheme = "pep440"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
changelog_start_rev = "v0.1.0"

version_files = [
    "pyproject.toml:version",
    "roller/__init__.py:__version__",
]

[tool.commitizen.customize]
bump_pattern = "^(feat|fix|refactor|perf|BREAKING CHANGE)"
bump_map = {"BREAKING CHANGE" = "MAJOR", "feat" = "MINOR", "fix" = "PATCH", "refactor" = "PATCH", "perf" = "PATCH"}
